--- a/style.css
+++ b/style.css
@@ -199,15 +199,62 @@ a {
     color: #F16D7F;
 }
 
+.product {
+    position: relative;
+}
+
+.product:hover .product__img {
+    filter: brightness(0.5);
+}
+
+.product:hover .product__add {
+    display: flex;
+}
+
+.product__img {
+    width: 100%;
+}
+
+.product__add {
+    position: absolute;
+    top: 188px;
+    left: 111px;
+    border: 1px solid #fff;
+    width: 139px;
+    height: 44px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    gap: 11px;
+    color: #FFFFFF;
+}
+
+.product__add:hover {
+    box-shadow: 0 0 5px #fff;
+}
+
+.product__add:hover svg path {
+    fill: #F16D7F;
+}
+
 .button__all {
-    margin-bottom: 70px;
-    margin-top: 32px;
+    margin-bottom: 92px;
+    margin-top: 48px;
     width: 212px;
     height: 48px;
     border: 1px solid #F16D7F;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+    transition: color 1s, background-color 1s;
+}
+
+.button__all:hover {
+    background-color: #F16D7F;
 }
 
 .all_text {
@@ -217,7 +264,121 @@ a {
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
-    color: #F26376;
+    color: #F16D7F;
+}
+
+.all_text:hover {
+    color: #FFFFFF;
+}
+
+.advantages {
+    background-color: #222222;
+    padding-top: 104px;
+    padding-bottom: 104px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+}
+
+.advantages__item {
+    width: 360px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+}
+
+.advantages__heading {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    color: #FBFBFB;
+}
+
+.advantages__text {
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    color: #FBFBFB;
+}
+
+.footer {
+    height: 79px;
+    background-color: #222224;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: center;
+}
+
+.copy {
+    color: white;
+}
+
+.footer__social {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 7px;
+    height: 32px;
+}
+
+.social__1 {
+    padding: 8px 11px;
+    background-color: #fff;
+}
+
+.social__2 {
+    padding: 8px;
+    background-color: #fff;
+}
+
+.social__3 {
+    padding: 8px 9px;
+    background-color: #fff;
+}
+
+.social__4 {
+    padding: 8px;
+    background-color: #fff;
+}
+
+.social__1:hover {
+    background-color: #F16D7F;
+}
+
+.social__1:hover img {
+    fill: white;
+}
+
+.social__2:hover {
+    background-color: #F16D7F;
+}
+
+.social__2:hover img {
+    fill: white;
+}
+
+.social__3:hover {
+    background-color: #F16D7F;
+}
+
+.social__3:hover img {
+    fill: white;
+}
+
+.social__4:hover {
+    background-color: #F16D7F;
+}
+
+.social__4:hover img {
+    fill: white;
 }
 
 @media (max-width: 1024px) {
