--- a/style.scss
+++ b/style.scss
@@ -78,11 +78,17 @@ a {
     position: relative;
 }
 
+.slider_main {
+    display: flex;
+    justify-content: center;
+}
+
 .arrows {
     display: flex;
     justify-content: space-between;
     position: absolute;
     top: 365px;
+    width: 100vw;
 }
 
 .arrow-right {
@@ -94,8 +100,6 @@ a {
 .catalog__info {
     border: 1px solid #EAEAEA;
     background-color: #fff;
-    position: absolute;
-    z-index: 1;
     padding-top: 64px;
     padding-bottom: 64px;
     display: flex;
@@ -137,6 +141,38 @@ a {
     line-height: 17px;
     text-align: center;
     color: #5E5E5E;
+    width: 555px;
+}
+
+.info__price {
+    font-style: normal;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 29px;
+    color: #EF5B70;
+}
+
+.add_to_cart_info {
+    margin-top: 48px;
+    padding: 15px 57px 9px 24px;
+    border: 1px solid #FF6A6A;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #F26376;
+    display: flex;
+    gap: 23px;
+    background-color: #fff;
+    align-items: center;
+}
+
+.line2 {
+    margin-top: 64px;
+    margin-bottom: 64px;
+    width: 642px;
+    background-color: #EAEAEA;
+    height: 1px;
 }
 
 .top {
