--- a/style.css
+++ b/style.css
@@ -122,8 +122,6 @@ a {
 .catalog__info {
   border: 1px solid #EAEAEA;
   background-color: #fff;
-  position: absolute;
-  z-index: 1;
   padding-top: 64px;
   padding-bottom: 64px;
   display: -webkit-box;
@@ -163,6 +161,53 @@ a {
   font-size: 18px;
   line-height: 22px;
   color: #4D4D4D;
+}
+
+.info__txt {
+  margin-top: 48px;
+  margin-bottom: 32px;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+  color: #5E5E5E;
+  width: 555px;
+}
+
+.info__price {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 29px;
+  color: #EF5B70;
+}
+
+.add_to_cart_info {
+  margin-top: 48px;
+  padding: 15px 57px 9px 24px;
+  border: 1px solid #FF6A6A;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #F26376;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 23px;
+  background-color: #fff;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.line2 {
+  margin-top: 64px;
+  margin-bottom: 64px;
+  width: 642px;
+  background-color: #EAEAEA;
+  height: 1px;
 }
 
 .top {
