--- a/style.scss
+++ b/style.scss
@@ -698,6 +698,9 @@ button:focus {
     .promo {
         padding-bottom: 56px;
     }
+    .promo__item_big {
+        min-height: auto;
+    }
     .products {
         padding-bottom: 32px;
     }
