--- a/style.css
+++ b/style.css
@@ -82,6 +82,11 @@ a {
   color: #F16D7F;
 }
 
+.breadcrumbs:last-child {
+  font-weight: 700;
+  color: #F16D7F;
+}
+
 .breadcrumbs__link {
   font-style: normal;
   font-weight: 300;
@@ -90,9 +95,15 @@ a {
   color: #636363;
 }
 
-.breadcrumbs__link_site {
-  font-weight: 700;
+.breadcrumbs__link:not(:last-child):after {
+  content: "/";
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+.breadcrumbs__link_site:last-child {
   color: #F16D7F;
+  font-weight: bold;
 }
 
 .slider {
