--- a/style.css
+++ b/style.css
@@ -547,6 +547,229 @@ a {
   fill: #F16D7F;
 }
 
+.cart__block {
+  padding-top: 96px;
+  padding-bottom: 128px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 128px;
+  position: relative;
+}
+
+.cart__block_close {
+  position: absolute;
+  right: 22px;
+  top: 28px;
+}
+
+.cart__block__left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 40px;
+}
+
+.cart__block__left img {
+  width: 262px;
+}
+
+.cart__block__left__card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 32px;
+  position: relative;
+  -webkit-filter: drop-shadow(17px 19px 24px rgba(0, 0, 0, 0.13));
+          filter: drop-shadow(17px 19px 24px rgba(0, 0, 0, 0.13));
+}
+
+.cart__block__left__card__info {
+  padding-top: 22px;
+  width: 390px;
+}
+
+.cart__block__left__card__info__a {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+  color: #222222;
+  text-decoration: none;
+}
+
+.cart__block__left__card__info__a:hover {
+  color: #F16D7F;
+}
+
+.cart__block__left__card__info__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 6px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26px;
+  color: #575757;
+}
+
+.cart__block__left__card__info__text__price {
+  color: #F16D7F;
+}
+
+.cart__block__left__card__info__quantity {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 25px;
+}
+
+.cart__block__left__card__info__quantity__input {
+  width: 43px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #656565;
+  border: 1px solid #EAEAEA;
+}
+
+.cart__block__left__card__info__links {
+  margin-bottom: 42px;
+}
+
+.cart__block__left__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.cart__block__left__buttons__item {
+  border: 1px solid #A4A4A4;
+  background: #FFFFFF;
+  text-align: center;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+  color: #000000;
+  padding: 16px 40px;
+}
+
+.cart__block__left__buttons__item:hover {
+  color: #FFFFFF;
+  background: #A4A4A4;
+}
+
+.cart__block__right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 57px;
+  width: 360px;
+}
+
+.cart__block__right__address {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 21px;
+}
+
+.cart__block__right__address input:first-child {
+  color: #B1B1B1;
+}
+
+.cart__block__right__address__h3 {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+  color: #222222;
+}
+
+.cart__block__right__address__input {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 16px;
+  color: #222222;
+  padding: 12px 17px 16px 17px;
+  width: 360px;
+  border: 1px solid #A4A4A4;
+}
+
+.cart__block__right__address__button {
+  background: #FFFFFF;
+  width: 101px;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 11px;
+  line-height: 13px;
+  color: #4A4A4A;
+  border: 1px solid #A4A4A4;
+  padding: 10px 12px;
+}
+
+.cart__block__right__address__button:hover {
+  background-color: #4A4A4A;
+  color: #fff;
+}
+
+.cart__block__right__checkout {
+  width: 360px;
+  height: 214px;
+  padding-top: 39px;
+  padding-bottom: 42px;
+  background: #F5F3F3;
+}
+
+.cart__block__right__checkout__sub {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 13px;
+  color: #4A4A4A;
+}
+
+.cart__block__right__checkout__total {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+  color: #222222;
+}
+
+.cart__block__right__checkout__total__span {
+  font-weight: 700;
+  color: #F16D7F;
+}
+
+.cart__block__right__checkout__line {
+  background: #E2E2E2;
+  width: 275px;
+}
+
 .button__all {
   margin-bottom: 92px;
   margin-top: 48px;
