--- a/style.scss
+++ b/style.scss
@@ -446,6 +446,172 @@ a {
     fill: $colorSelectSite;
 }
 
+.cart__block {
+    padding-top: 96px;
+    padding-bottom: 128px;
+    display: flex;
+    gap: 128px;
+    position: relative;
+    &_close {
+        position: absolute;
+        right: 22px;
+        top: 28px;
+    }
+    &__left {
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+        & img {
+            width: 262px;
+        }
+        &__card {
+            display: flex;
+            gap: 32px;
+            position: relative;
+            filter: drop-shadow(17px 19px 24px rgba(0, 0, 0, 0.13));
+            &__info {
+                padding-top: 22px;
+                width: 390px;
+                &__a {
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 24px;
+                    line-height: 29px;
+                    color: #222222;
+                    text-decoration: none;
+                }
+                &__a:hover {
+                    color: $colorSelectSite;
+                }
+                &__text {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 6px;
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 22px;
+                    line-height: 26px;
+                    color: #575757;
+                    &__price {
+                        color: $colorSelectSite;
+                    }
+                }
+                &__quantity {
+                    display: flex;
+                    gap: 25px;
+                    &__input {
+                        width: 43px;
+                        text-align: center;
+                        font-weight: 400;
+                        font-size: 18px;
+                        line-height: 22px;
+                        color: #656565;
+                        border: 1px solid #EAEAEA;
+                    }
+                }
+                &__links {
+                    margin-bottom: 42px;
+                }
+            }
+        }
+        &__buttons {
+            display: flex;
+            justify-content: space-between;
+            &__item {
+                border: 1px solid #A4A4A4;
+                background: #FFFFFF;
+                text-align: center;
+                font-style: normal;
+                font-weight: 300;
+                font-size: 14px;
+                line-height: 17px;
+                color: #000000;
+                padding: 16px 40px;
+            }
+            &__item:hover {
+                color: #FFFFFF;
+                background: #A4A4A4;
+            }
+        }
+    }
+    &__right {
+        display: flex;
+        flex-direction: column;
+        gap: 57px;
+        width: 360px;
+        &__address {
+            display: flex;
+            flex-direction: column;
+            gap: 21px;
+            & input:first-child {
+                color: #B1B1B1;
+            }
+            &__h3 {
+                font-style: normal;
+                font-weight: 300;
+                font-size: 16px;
+                line-height: 19px;
+                color: #222222;
+            }
+            &__input {
+                font-style: normal;
+                font-weight: 300;
+                font-size: 13px;
+                line-height: 16px;
+                color: #222222;
+                padding: 12px 17px 16px 17px;
+                width: 360px;
+                border: 1px solid #A4A4A4;
+            }
+            &__button {
+                background: #FFFFFF;
+                width: 101px;
+                font-style: normal;
+                font-weight: 300;
+                font-size: 11px;
+                line-height: 13px;
+                color: #4A4A4A;
+                border: 1px solid #A4A4A4;
+                padding: 10px 12px;
+            }
+            &__button:hover {
+                background-color: #4A4A4A;
+                color: #fff;
+            }
+        }
+    }
+}
+
+.cart__block__right__checkout {
+    width: 360px;
+    height: 214px;
+    padding-top: 39px;
+    padding-bottom: 42px;
+    background: #F5F3F3;
+    &__sub {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 11px;
+        line-height: 13px;
+        color: #4A4A4A;
+    }
+    &__total {
+        font-style: normal;
+        font-weight: 300;
+        font-size: 16px;
+        line-height: 19px;
+        color: #222222;
+        &__span {
+            font-weight: 700;
+            color: $colorSelectSite;
+        }
+    }
+    &__line {
+        background: #E2E2E2;
+        width: 275px;
+    }
+}
+
 .button__all {
     margin-bottom: 92px;
     margin-top: 48px;
