--- a/style.css
+++ b/style.css
@@ -737,27 +737,49 @@ a {
 }
 
 .cart__block__right__checkout {
-  width: 360px;
-  height: 214px;
-  padding-top: 39px;
-  padding-bottom: 42px;
+  width: 310px;
+  padding: 39px 43px 42px 43px;
   background: #F5F3F3;
 }
 
 .cart__block__right__checkout__sub {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 24px;
+  -webkit-box-pack: right;
+      -ms-flex-pack: right;
+          justify-content: right;
   font-style: normal;
   font-weight: 400;
   font-size: 11px;
   line-height: 13px;
   color: #4A4A4A;
+  padding-bottom: 12px;
 }
 
 .cart__block__right__checkout__total {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 24px;
+  -webkit-box-pack: right;
+      -ms-flex-pack: right;
+          justify-content: right;
   font-style: normal;
   font-weight: 300;
   font-size: 16px;
   line-height: 19px;
   color: #222222;
+  padding-bottom: 21px;
 }
 
 .cart__block__right__checkout__total__span {
@@ -767,7 +789,27 @@ a {
 
 .cart__block__right__checkout__line {
   background: #E2E2E2;
-  width: 275px;
+  width: 100%;
+  height: 1px;
+  margin-bottom: 17px;
+}
+
+.cart__block__right__checkout__button {
+  width: 100%;
+  height: 50px;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+  color: #FFFFFF;
+  background-color: #F16D7F;
+  border: 0px;
+}
+
+.cart__block__right__checkout__button:hover {
+  border: 1px solid #F16D7F;
+  background-color: #fff;
+  color: #F16D7F;
 }
 
 .button__all {
