--- a/style.scss
+++ b/style.scss
@@ -583,24 +583,32 @@ a {
 }
 
 .cart__block__right__checkout {
-    width: 360px;
-    height: 214px;
-    padding-top: 39px;
-    padding-bottom: 42px;
+    width: 310px;
+    padding: 39px 43px 42px 43px;
     background: #F5F3F3;
     &__sub {
+        display: flex;
+        flex-direction: row;
+        gap: 24px;
+        justify-content: right;
         font-style: normal;
         font-weight: 400;
         font-size: 11px;
         line-height: 13px;
         color: #4A4A4A;
+        padding-bottom: 12px;
     }
     &__total {
+        display: flex;
+        flex-direction: row;
+        gap: 24px;
+        justify-content: right;
         font-style: normal;
         font-weight: 300;
         font-size: 16px;
         line-height: 19px;
         color: #222222;
+        padding-bottom: 21px;
         &__span {
             font-weight: 700;
             color: $colorSelectSite;
@@ -608,7 +616,25 @@ a {
     }
     &__line {
         background: #E2E2E2;
-        width: 275px;
+        width: 100%;
+        height: 1px;
+        margin-bottom: 17px;
+    }
+    &__button {
+        width: 100%;
+        height: 50px;
+        font-style: normal;
+        font-weight: 300;
+        font-size: 16px;
+        line-height: 19px;
+        color: #FFFFFF;
+        background-color: $colorSelectSite;
+        border: 0px;
+    }
+    &__button:hover {
+        border: 1px solid $colorSelectSite;
+        background-color: #fff;
+        color: $colorSelectSite;
     }
 }
 
