--- a/style.css
+++ b/style.css
@@ -812,6 +812,143 @@ a {
   color: #F16D7F;
 }
 
+.registration__block {
+  padding-top: 64px;
+  padding-bottom: 96px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 128px;
+}
+
+.registration__block__left__button {
+  width: 167px;
+  height: 50px;
+  padding: 16px 29px;
+  background-color: #F16D7F;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #FFFFFF;
+  border: 0px;
+}
+
+.registration__block__left__button__span {
+  margin-left: 19px;
+}
+
+.registration__block__left__button:hover {
+  color: #F16D7F;
+  background-color: #fff;
+  border: 1px solid #F16D7F;
+}
+
+.registration__block__left__button:hover span path {
+  fill: #F16D7F;
+}
+
+.registration__block__left__form1 {
+  margin-bottom: 31px;
+}
+
+.registration__block__left__form1__heading {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+  color: #222222;
+  padding-bottom: 19px;
+}
+
+.registration__block__left__form1__info {
+  border: 1px solid #A4A4A4;
+  width: 360px;
+  padding: 12px 17px 15px 17px;
+  margin: 8px 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.registration__block__left__form3 {
+  margin-bottom: 39px;
+}
+
+.registration__block__left__form3__heading {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+  color: #222222;
+  padding-bottom: 19px;
+}
+
+.registration__block__left__form3__info {
+  border: 1px solid #A4A4A4;
+  width: 360px;
+  padding: 12px 17px 15px 17px;
+  margin: 8px 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.registration__block__left__form3__txt {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 16px;
+  color: #B1B1B1;
+}
+
+.registration__block__left__form2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 13px;
+  color: #000000;
+  padding-bottom: 33px;
+}
+
+.registration__block__left__form2__radio {
+  margin-right: 10px;
+}
+
+.registration__block__right__info__h3 {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 29px;
+  color: #000000;
+}
+
+.registration__block__right__info__heading {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 29px;
+  color: #000000;
+  margin-bottom: 21px;
+  margin-top: 22px;
+}
+
+.registration__block__right__info__list {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 29px;
+  color: #000000;
+  margin-bottom: 16px;
+}
+
+.registration__block__right__info__list::before {
+  content: url(img/checkmark.svg);
+  padding-right: 22px;
+}
+
 .button__all {
   margin-bottom: 92px;
   margin-top: 48px;
