--- a/style.scss
+++ b/style.scss
@@ -638,6 +638,120 @@ a {
     }
 }
 
+.registration__block {
+    padding-top: 64px;
+    padding-bottom: 96px;
+    display: flex;
+    gap: 128px;
+    &__left__button {
+        width: 167px;
+        height: 50px;
+        padding: 16px 29px;
+        background-color: $colorSelectSite;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+        color: #FFFFFF;
+        border: 0px;
+        &__span {
+            margin-left: 19px;
+        }
+    }
+    &__left__button:hover {
+        color: $colorSelectSite;
+        background-color: #fff;
+        border: 1px solid $colorSelectSite;
+        span path {
+            fill: $colorSelectSite;
+        }
+    }
+    &__left__form1 {
+        margin-bottom: 31px;
+        &__heading {
+            font-style: normal;
+            font-weight: 300;
+            font-size: 16px;
+            line-height: 19px;
+            color: #222222;
+            padding-bottom: 19px;
+        }
+        &__info {
+            border: 1px solid #A4A4A4;
+            width: 360px;
+            padding: 12px 17px 15px 17px;
+            margin: 8px 0;
+            box-sizing: border-box;
+        }
+    }
+    &__left__form3 {
+        margin-bottom: 39px;
+        &__heading {
+            font-style: normal;
+            font-weight: 300;
+            font-size: 16px;
+            line-height: 19px;
+            color: #222222;
+            padding-bottom: 19px;
+        }
+        &__info {
+            border: 1px solid #A4A4A4;
+            width: 360px;
+            padding: 12px 17px 15px 17px;
+            margin: 8px 0;
+            box-sizing: border-box;
+        }
+        &__txt {
+            font-style: normal;
+            font-weight: 300;
+            font-size: 13px;
+            line-height: 16px;
+            color: #B1B1B1;
+        }
+    }
+    &__left__form2 {
+        display: flex;
+        gap: 20px;
+        font-style: normal;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 13px;
+        color: #000000;
+        padding-bottom: 33px;
+        &__radio {
+            margin-right: 10px;
+        }
+    }
+    &__right__info__h3 {
+        font-style: normal;
+        font-weight: 300;
+        font-size: 24px;
+        line-height: 29px;
+        color: #000000;
+    }
+    &__right__info__heading {
+        font-style: normal;
+        font-weight: 300;
+        font-size: 24px;
+        line-height: 29px;
+        color: #000000;
+        margin-bottom: 21px;
+        margin-top: 22px;
+    }
+    &__right__info__list {
+        font-style: normal;
+        font-weight: 300;
+        font-size: 24px;
+        line-height: 29px;
+        color: #000000;
+        margin-bottom: 16px;
+    }
+    &__right__info__list::before {
+        content: url(img/checkmark.svg);
+        padding-right: 22px;
+    }
+}
+
 .button__all {
     margin-bottom: 92px;
     margin-top: 48px;
